# codex-savings-tray

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: RELEASE.md  ffi-contract.md
reports/runs/: 2026-07-10T03-31-03-495Z-chatgpt-run-report.json  2026-07-10T03-31-03-495Z-chatgpt-run-report.json.meta.json
src/: lib.rs  main.rs
ui/CodexSavings.App/: App.xaml  App.xaml.cs  CodexSavings.App.csproj  CoreBridge.cs  FlyoutPlacement.cs  FlyoutVisibilityController.cs  FlyoutWindowNative.cs  Package.appxmanifest  RefreshCoordinator.cs  SettingsValidator.cs  SnapshotPresentation.cs  TrayHost.cs  UiStrings.cs  app.manifest
ui/CodexSavings.App.Tests/: CodexSavings.App.Tests.csproj  Program.cs
ui/CodexSavings.App/Strings/en-US/: Resources.resw
ui/CodexSavings.App/Strings/es-ES/: Resources.resw
