[package]
name = "codex-savings-tray"
version = "0.2.0"
edition = "2021"
description = "Tiny Windows tray app for estimating API-equivalent Codex usage savings."
license = "MIT"
readme = "README.md"
publish = false

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_GdiPlus",
  "Win32_System_Registry",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
