[package]
name = "codex-savings-tray"
version = "0.2.1"
edition = "2021"
description = "Tiny Windows tray app for estimating API-equivalent Codex usage savings."
license = "MIT"
readme = "README.md"
publish = false

[lib]
name = "codex_savings_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_System_SystemInformation",
  "Win32_System_Time",
] }
